--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,6 @@
 <div class="top clearfix">
 	<a href="{{ site.baseurl }}/"><strong>Shakna Israel</strong></a>
 	<span class="right">
-		<!-- <a href="{{ site.baseurl }}/search/"><strong>Search</strong></a> -->
-		<!-- Search is not yet working -->
+		<a href="{{ site.baseurl }}/search/"><strong>Search</strong></a>
 	</span>
 </div>
