--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -289,6 +289,7 @@ p.book-icon {
 }
 
 .only-mobile li img {
+	margin: 5px;
 	border-radius: 15px;
 	-moz-border-radius: 15px;
 	-webkit-border-radius: 15px;
