--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,5 +10,6 @@
     {% endif %}
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="{{ site.baseurl }}/assets/css/main.css" rel="stylesheet">
+    <link rel="shortcut icon" href="{{ site.baseurl }}/assets/img/Favicon.ico" />
     <link rel="shortcut icon" href="{{ site.baseurl }}/assets/img/favicon.ico" />
 </head>
