--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,6 +13,12 @@
 	{% if site.data.social.reddit %}
 	<a href="//reddit.com/u/{{ site.data.social.reddit }}" target="_blank"><strong>Reddit</strong></a>
 	{% endif %}
+	{% if site.data.social.lulu %}
+	<a href="//{{ site.data.social.lulu }}" target="_blank"><strong>Lulu</strong></a>
+	{% endif %}
+	{% if site.data.social.kobo %}
+	<a href="//{{ site.data.social.kobo }}" target="_blank"><strong>Kobo</strong></a>
+	{% endif %}
 	{% if site.data.social.email %}
 	<a href="mailto:{{ site.data.social.email }}" target="_blank"><strong>Email</strong></a>
 	{% endif %}
