--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -16,7 +16,7 @@
 
 							},
 							orientation : 'h',
-							cuboidsRandom : true,
+							cuboidsRandom : false,
 							disperseFactor : 30
 						} ),
 
