--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -3,6 +3,8 @@
 
 $head-width: 24px;
 $background-width: 1067px;
+$sb-background: #9f9f9f;
+$sb-background-alpha: rgba(159,159,159, 0.8);
 
 @import
     "layout",
