Mobile Version Tweaks

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,7 @@
 {% include header.html %}
 {% include head.html %}
 <img class="bg" src="{{ site.baseurl }}/assets/img/profile.png" />
+<img class="bg-m" src="{{ site.baseurl }}/assets/img/profile-mobile.jpg" />
 {{ content }}
 
 {% include scripts.html %}
